Bunch of style issues addressed