@@ -97,7 +97,7 @@ public class FilenameUtils {
    * 
    * @since Commons IO 1.4
    */
-  public static final String EXTENSION_SEPARATOR_STR = (new Character(EXTENSION_SEPARATOR)).toString();
+  public static final String EXTENSION_SEPARATOR_STR = (Character.valueOf(EXTENSION_SEPARATOR)).toString();
 
   /**
    * The Unix separator character.
